removed extra logo layer fixed layout (moved open to right) fixed large menu visibility bug

--- a/css/style copy.css
+++ b/css/style copy.css
@@ -52,7 +52,6 @@ body {
   --grey-blue: #c7d5ed;
   --section-vertical-padding: 100px;
   --typography-v-padding: 15px;
-  --menu-offset: 50px;
   font-family: "Roboto", sans-serif;
   color: var(--dark-blue);
 }
@@ -138,7 +137,7 @@ ul li a {
 }
 
 /* ==========================================================================
-   Logo
+   Logo Top Layer
    ========================================================================== */
 .logo-layout {
   position: absolute;
@@ -158,19 +157,6 @@ ul li a {
   align-items: center;
 }
 
-/* placed twice in html, therefore not nested */
-.logo-element {
-  background-color: var(--dark-blue);
-  display: flex;
-  width: -webkit-max-content;
-  width: -moz-max-content;
-  width: max-content;
-  height: 100%;
-  align-items: center;
-  font-size: 22px;
-  padding: 0 50px 0 0;
-}
-
 /* ==========================================================================
    Small Screen Menu
    ========================================================================== */
@@ -178,16 +164,12 @@ ul li a {
   position: absolute;
   width: 100%;
   top: 0px;
-  right: 0px;
   transform: translateY(-100%);
   display: flex;
   justify-content: center;
   transition: 0.3s;
   transition-timing-function: cubic-bezier(0.19, 1, 0.22, 1);
   background-color: var(--dark-blue);
-  width: -webkit-max-content;
-  width: -moz-max-content;
-  width: max-content;
 }
 #menu:target, #menu[aria-expanded=true] {
   transform: translateY(0);
@@ -196,8 +178,8 @@ ul li a {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  width: var(--large-layout-width);
   gap: 1px;
-  padding: 0px 50px 25px 50px;
 }
 #menu li {
   padding: 6px 0;
@@ -206,8 +188,10 @@ ul li a {
 /* ==========================================================================
    Large Screen Items
    ========================================================================== */
-.large-menu li {
-  display: none;
+.large-menu,
+.large-screen-logo {
+  top: -500px;
+  position: absolute;
 }
 
 /* ==========================================================================
@@ -235,9 +219,12 @@ ul li a {
     row-gap: 10px;
     justify-content: flex-end;
     flex-wrap: wrap;
+    top: 0;
+    position: relative;
   }
-  .header .large-menu li {
-    display: block;
+  .header .large-screen-logo {
+    top: 0;
+    position: relative;
   }
   .logo {
     display: flex;
@@ -247,4 +234,4 @@ ul li a {
     position: absolute;
     transform: translateY(-100%);
   }
-}/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style copy.css.map */
